# ExagonPlus

./: CMakeLists.txt
include/glad/: glad.h
src/: BG.cpp  Engine.cpp  ExagonGameProcess.cpp  ExagonPanel.cpp  MainFrame.cpp  MainFrameT.cpp  glad.c  imageProcessor.cpp  main.cpp  resource.h  resource.rc
src/PEngine/: PEngineMain.cpp  PEngineMain.hpp
src/PEngine/GraphicsCore/: GraphicsCore.cpp
src/PEngine/GraphicsCore/CoreGL33/: BufferManager.hpp  GCoreGL33.hpp
src/PEngine/GraphicsCore/Desktop/: GCoreDesktop.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
src/PEngine/GraphicsCore/include/: GCore.hpp  GraphicsCore.hpp
src/PEngine/ResourceManager/: ResourceManager.cpp
src/PEngine/ResourceManager/RMDesktop/: ResourceManager.hpp
src/PEngine/ResourceManager/include/: IResourceManager.hpp  ResourceManager.hpp
src/game/: AnimationMaker.hpp  BG.hpp  BGType.hpp  Center.hpp  CollisionSystem.hpp  Color.h  Engine.hpp  ExagonGameProcess.hpp  ExagonPanel.hpp  LeverLoader.hpp  Player.hpp  Shaders.hpp  SongPlayer.hpp  Time.hpp  Wall.hpp  WallObject.hpp  initconfig.json
src/game/AEngine/: AudioBuffer.hpp  AudioProcessor.cpp  AudioProcessor.h  Engine.cpp  Engine.hpp  Handler.hpp  Source.hpp
src/game/GEngine/: Buffer.hpp  Engine.cpp  Engine.hpp  ImageProcessor.hpp  Shader.cpp  Shader.hpp  Shaders.hpp  glad.c  imageProcessor.cpp
src/game/GEngine/shaders/: bg.frag  bg.vert  (+2 more)
src/game/utils/: Color.h  Position.h  Vertex.h
src/levels/vanilla/: debug2.txt  list.lvl  lvl1.txt  lvl2.txt  lvltest.txt  lvltest2.txt
src/shaders/: shape.frag  shape.vert
(+3 files in other folders)
